# example_pkg

./: .coveragerc  .gitignore  LICENCE  LICENSE  MANIFEST.in  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  example_pkg.rst  index.rst  quickstart.rst
example_pkg/: calculator.py  foo.py  statistics.py
src/example_pkg/: calculator.py
src/example_pkg/data/: meta.csv
tests/: test_calculator.py  test_foo.py  test_statistics.py
