[metadata]
# Enter config details of package
# See for more details here https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
name = example_pkg_tiri
version = 0.1.0
author = Tiri Georgiou
author_email = tirigeorgiou@gmail.com
description = An example package for illustration purposes.
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/Tiri1992/example_pkg
license = MIT
license_file = License
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# Name of packages and requirments
packages = example_pkg
python_requires = >= 3.8
install_requires = 
    # Add package dependencies
    requests>=2.24.0
    numpy>=1.11
include_package_data = True # Accepts all datafiles in MANIFEST.in

[options.extras_require]
# These are for installing for different requirements
# I.e. if you want to develop the application use [dev]
test =
    # Test only dependencies
    pytest
    pytest-cov
    tox
docs =
    # Documentation
    Sphinx
style =
    # Linting
    flake8 >=3.9.0
    mypy

all = 
    # Installs all the above
    %(docs)s 
    %(test)s 
    %(style)s

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True